--- a/src/page/accountEdit/token_list/style.module.less
+++ b/src/page/accountEdit/token_list/style.module.less
@@ -170,15 +170,6 @@
 	.tokenContainer {
 		flex-direction: column;
 		align-items: stretch;
-
-		button {
-			align-self: flex-start;
-			width: auto;
-			height: 34px;
-			padding: 0 12px;
-			font-size: 14px;
-			line-height: 1.2;
-		}
 	}
 
 	.token {
